flL class change

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -49,12 +49,12 @@ body.admin-menu {
 
 .flL {
   float:left;
-  margin: 0 .5em 1em 0;
+  margin: 0 .5em .5em 0;
   }
 
 .flR {
   float: right;
-  margin: 0 0 .1em 1em;
+  margin: 0 0 .5em .5em;
   }
 
 .clear {
@@ -138,7 +138,7 @@ a, a:visited {
 p.copy {
   line-height: 29px;
   width: 470px;
-  margin: 4px auto;
+  margin: 4px auto 0 auto;
   clear:both;
   }
 
@@ -177,7 +177,7 @@ p.copy #powered-link {
   }
 
 p.copy a.poweredby  {
-  background: url(images/poweredby.png);
+  background: url(images/poweredby.png) no-repeat 0 0 #fff;
   text-indent:-999em;
   display:block;
   width:86px;
