added bg to terms div

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -521,6 +521,12 @@ body.header-right-main #header-wrapper {
   float:right;
   }
 
+/*TERMS*/
+
+.meta {
+  padding: 2px;
+  background: #f2f7fe;
+  }
 
 
 /* BIBLIO */
