--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -213,7 +213,7 @@ ul.links li {
 ul.links li a, ul.links li a:visited {
   text-decoration: none;
   font-style: normal;
-  padding: 1px 3px;
+  padding: 1px 0 1px 3px;
   font-size: 12px;
   color: #005C9C;
   background: transparent;
