--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -109,11 +109,11 @@ ol {
   padding: 0;
   }
 
-.meta .terms ul li:after {
+.terms ul li:after {
   content:',';
   }
 
-.meta .terms ul li:last-child:after {
+.terms ul li:last-child:after {
   content: '';
   }
 
