--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -105,7 +105,7 @@ ol {
   padding-left: 0;
   }
 
-.meta .terms ul li, .meta .terms ul li a {
+.terms ul li, .terms ul li a {
   padding: 0;
   }
 
