font size biblio year headings

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -65,6 +65,11 @@ h2.title, h3.title {
   margin:0;
   }
 
+.biblio-separator-bar {
+  font-size: 1.2em;
+  margin-top: 2em;
+  }
+
 a {
   text-decoration: none;
   }
@@ -94,6 +99,10 @@ a:hover {
   }
 
 /* BASIC LAYOUT */
+
+table {
+  width: 100%;
+  }
 
 #wrapper {
   background: url(images/navbar.png) 50% 0 no-repeat transparent;
