--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -416,6 +416,10 @@ body.header-right-main #header-wrapper {
   padding: 1px;
   }
 
+#footer #block-vsite_widgets-2 {
+  margin-top: 8px;
+  }
+
 #footer p.copy {
   margin-top:0;
   color: #fff;
