--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -327,7 +327,7 @@ body.header-right-main #header-wrapper {
 
 #footer .block, #footer p.copy {
   float: left;
-  margin-right: 36px;
+  margin-right:30px;
   clear:none;
   }
 
@@ -409,6 +409,10 @@ body.header-right-main #header-wrapper {
   margin-top: 6px;
   margin-bottom: 1px;
   color: #000;
+  }
+
+#footer .goog-te-gadget {
+  font-size: 0;
   }
 
 #footer .goog-logo-link img {
