adding logo image

--- a/sites/all/themes/custom/thedata/thedata.css
+++ b/sites/all/themes/custom/thedata/thedata.css
@@ -31,7 +31,11 @@ h2, h3, h4 {
 	}
 
 #header-main h1 {
-	display: none;
+	width: 230px;
+	height: 120px;
+	background: url(images/logo.png) no-repeat 0 0;
+	text-indent: -999em;
+	float: left;
 	}
 
 #header-left {
@@ -44,17 +48,11 @@ h2, h3, h4 {
 	padding-right:0;
 	}
 
-#logo a {
+#header-main h1 a {
 	width: 230px;
 	height: 120px;
 	display: block;
-	background: url(images/Picture_16.png) no-repeat 0 0;
 	}
-
-#logo img {
-	display: none;
-	}
-
 
 #navbar li a {
 	border-right: 1px solid #BBBBBB;
