adding logo image

--- a/sites/all/themes/custom/thedata/thedata.css
+++ b/sites/all/themes/custom/thedata/thedata.css
@@ -11,6 +11,10 @@ h2, h3, h4 {
 	}
 
 
+#header .column {
+  padding-bottom: 0;
+  }
+
 #content-wrapper {
 	background: url(images/container.png) repeat-y 0 0 transparent;
 	}
@@ -25,17 +29,18 @@ h2, h3, h4 {
 	background: url(images/header.png) no-repeat 0 0;
 	}
 
-
 #header-wrapper {
 	padding-left: 248px;
+	height:130px;
 	}
 
 #header-main h1 {
-	width: 230px;
+	width: 221px;
 	height: 120px;
 	background: url(images/logo.png) no-repeat 0 0;
 	text-indent: -999em;
 	float: left;
+	margin-left:17px;
 	}
 
 #header-left {
@@ -49,7 +54,7 @@ h2, h3, h4 {
 	}
 
 #header-main h1 a {
-	width: 230px;
+	width: 221px;
 	height: 120px;
 	display: block;
 	}
