--- a/sites/all/themes/custom/thedata/thedata.css
+++ b/sites/all/themes/custom/thedata/thedata.css
@@ -11,8 +11,8 @@ h2, h3, h4 {
 	}
 
 
-#header .column {
-  padding-bottom: 0;
+body.header-main #header-main {
+  padding-bottom: 0 !important;
   }
 
 #content-wrapper {
