--- a/sites/all/themes/qualitative_methods/qualitative-methods.css
+++ b/sites/all/themes/qualitative_methods/qualitative-methods.css
@@ -1,4 +1,4 @@
-﻿@font-face {
+@font-face {
 	font-family: 'MyriadProBold';
 	src: url('fonts/MyriadPro-Bold.eot');
 	src: local('fonts/Myriad Pro Bold'), local('fonts/MyriadPro-Bold'), url('fonts/MyriadPro-Bold.woff') format('woff'), url('fonts/MyriadPro-Bold.otf') format('opentype'), url('fonts/MyriadPro-Bold.svg#MyriadPro-Bold') format('svg');
