moving research interests css to theme; changes to attachments

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -571,18 +571,18 @@ body.header-right-main #header-wrapper {
 
 /* ATTACHMENTS*/
 
-.node-type-biblio div.itu-attachment-list {
+.node-type-biblio .itu-attachment {
   display:inline-block;
   vertical-align:middle;
   }
 
-.node-type-biblio table.itu-attachment-list {
+.node-type-biblio .itu-attachment-list {
   width: auto;
-  border: none;
+  border: none !important;
   border-spacing: 0;
   }
 
 
-.node-type-biblio table.itu-attachment-list td {
+.node-type-biblio .itu-attachment-list td {
   padding-right: .4em;
   }
