fix to attachment css on gary site

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -571,7 +571,7 @@ body.header-right-main #header-wrapper {
 
 /* ATTACHMENTS*/
 
-.node-type-biblio .itu-attachment {
+.node-type-biblio .itu-attachments {
   display:inline-block;
   vertical-align:middle;
   }
