--- a/sites/all/themes/custom/kshepsle/kshepsle.css
+++ b/sites/all/themes/custom/kshepsle/kshepsle.css
@@ -1,4 +1,4 @@
-body.page-home #container, body.page-home  #content-wrapper-bottom {
+body.page-home #container {
   background: #44514F;
   padding: 0;
   }
