--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -1,5 +1,5 @@
-html, body {
-  min-width:1020px;
+html, body, #footer, #content-wrapper {
+  min-width:1017px;
   }
 
 body {
@@ -83,7 +83,7 @@ p.copy {
 
 #header ul.menu li a, #header ul.menu li a:visited {
   font-size: 13px;
-  padding: 0 17px;
+  padding: 0 14px;
   display:block;
   text-decoration: none;
   }
@@ -130,6 +130,10 @@ p.copy {
 #navbar {
   height: 59px;
   line-height:59px;
+  }
+
+#navbar #block-vsite_menus-0 {
+  padding-right: 30px;
   }
 
 #navbar, #navbar ul.menu li a, #navbar ul.menu li a:visited {
@@ -200,7 +204,10 @@ p.copy {
   top: 117px;
   bottom: 42px;
   margin:0;
-   }
+  }
+
+#content-wrapper-inner {
+  }
 
 .no-bg {
   background-image: none !important;
