--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -6,6 +6,7 @@ body {
   font: 90%/1.4em arial, helvetica, sans-serif;
   color: #000;
   background: fixed url(images/body-bg.png) repeat-x 0 100% #fbfbfb;
+  background: #fff;
   }
 
 /* TYPOGRAPHY */
@@ -102,7 +103,7 @@ a:hover {
 
 
 
-#wrapper {
+#wrapper, #navbar {
   background: url(images/navbar.png) 50% 0 no-repeat transparent;
   }
 
@@ -116,8 +117,9 @@ a:hover {
   }
 
 #content, .column .block {
-  -moz-border-radius: 4px;
+  /*-moz-border-radius: 4px;
   -webkit-border-radius: 4px;
+  */
   padding: 0 16px 16px 16px;
   border:1px solid #d7d7d7;
   background: #fff;
@@ -156,6 +158,7 @@ a:hover {
   padding: 1px 8px;
   position: relative;
   overflow:auto;
+  background: #eee;
   }
 
 
@@ -316,8 +319,10 @@ body.header-right-main #header-wrapper {
     bottom: 0;
     left: 0;
     right: 0;
-    background: #AEAEB1;
+    background: #FFF;
     padding: 0 15px;
+    z-index:1;
+    border-top:1px solid #ccc;
     }
 
 #footer-inner {
