fixes to theme 5, additions to openscholar, base

--- a/sites/all/themes/scholar_base/ie-7.css
+++ b/sites/all/themes/scholar_base/ie-7.css
@@ -21,7 +21,8 @@
 .empty-content p,
 .empty-content .item-list ul.context-links li,
 .ahah-progress .throbber,
-.column {
+.column,
+#powered-link {
   display: inline;
   }
 
