--- a/sites/all/themes/scholar_theme_05/scholar-theme-05-ie.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05-ie.css
@@ -1,7 +1,3 @@
-#sidebar-left {
-	left: 210px;
+body.two-sidebars #sidebar-left, body.two-sidebars #header-left {
+	left: 195px;
 	}
-
-#header-left {
-  left: -210px;
-  }
