--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -20,6 +20,19 @@ body.two-sidebars {
     background-image: url(images/body-bg-both-sidebar.jpg);
     }
 
+body.sidebar-left #header {
+    background-image:url(images/header-left-sidebar.jpg);
+    }
+
+body.sidebar-right #header {
+    background-image:url(images/header-right-sidebar.jpg);
+    }
+
+body.two-sidebars #header {
+    background-image:url(images/header-both-sidebar.jpg);
+    }
+
+
 #extradiv {
     text-indent: -999em;
     position: fixed;
@@ -31,10 +44,12 @@ body.two-sidebars {
     }
 
 #container {
-    width: 960px;
+    width: 1000px;
     margin: 0 auto;
     padding-bottom: 213px;
     }
+
+/* TYPOGRAPHY */
 
 a, a:visited {
     color:#953a0d;
@@ -66,136 +81,14 @@ h2.title {
   margin-bottom: 1em;
   }
 
-
 #block-menu-primary-links {
     text-transform: uppercase;
     }
 
-#sidebar-left {
-  text-align:right;
-  }
-
-#sidebar-left ul.menu {
-  text-transform: uppercase;
-  text-align:right;
-  }
-
-
-/* LAYOUT */
-
-#header-main, #content-main {
-  padding: 10px 35px;
-  }
-
-#sidebar-left, #header-left {
-  width: 130px;
-  right: 194px;
-  padding-right: 10px;
-  padding-left: 34px;
-  }
-
-#sidebar-left {
-  right: 244px;
-  top: -100px;
-  }
-
-#sidebar-right, #header-right {
-  width: 154px;
-  padding-left: 20px;
-  padding-right: 34px;
-  }
-
-#header-wrapper, #content-wrapper {
-  width: auto;
-  padding-left: 174px;
-  padding-right: 228px;
-  }
-
-#content-wrapper {
-  padding-right: 278px;
-  }
-
-#sidebar-left, #sidebar-right {
-  font-size: 13px;
-  line-height: 112%;
-  }
-
-#sidebar-left li, #sidebar-right li {
-  margin-bottom: .7em;
-  }
-
-body.sidebar-left #content-wrapper {
-  padding-right: 70px;
-  }
-
-body.no-sidebars #content-wrapper {
-  padding-right: 35px;
-  padding-left: 35px;
-  }
-
-
-body.navbar #content-main {
-  margin-top: 30px;
-  }
-
-#content-main, #sidebar-right, #sidebar-left {
-  padding-top: 0;
-  }
-
-
-/* HEADER ELEMENTS */
-
-
-#header {
-    padding-top: 41px;
-    background:url(images/header-no-sidebar.jpg) no-repeat top center #6d2a01;
-    }
-
-
-#header-main {
-  background: transparent;
-  padding-left: 10px;
-  padding-right:10px;
-  }
-
-#header #header-right {
-    padding-top: 20px;
-    text-align: center;
-    }
-
-body.sidebar-left #header, body.two-sidebars #header {
-  padding-left: 173px;
-  }
-
-body.header-left-main #header {
-  padding-right: 248px;
-  }
-
-body.sidebar-left #header {
-    background-image:url(images/header-left-sidebar.jpg);
-    }
-
-body.sidebar-right #header {
-    background-image:url(images/header-right-sidebar.jpg);
-    }
-
-body.two-sidebars #header {
-    background-image:url(images/header-both-sidebar.jpg);
-    }
-
-body.header-main #block-scholar-1, body.header-main-right #block-scholar-1 {
-  padding-left: 149px;
-  background: url(images/crest.png) no-repeat 21px 0 transparent;
-  min-height: 112px;
-  }
-
-body.sidebar-right #header-wrapper {
-  margin: 0;
-  }
-
 #header h1 {
     font-size: 2em;
     line-height: 1em;
+    font-weight: normal;
     }
 
 #header h1, #header h2, #header h3, #header a, #header a:visited, #header h1 a, #header h1 a:visited, #header {
@@ -215,6 +108,147 @@ body.sidebar-right #header-wrapper {
 #header a, #header a:visited {
     text-decoration: none;
     }
+
+
+#sidebar-left {
+  text-align:right;
+  }
+
+#sidebar-left ul.menu {
+  text-transform: uppercase;
+  text-align:right;
+  }
+
+
+/* LAYOUT */
+
+#header-main {
+  padding: 10px 32px;
+  }
+
+body.sidebar-left #header-main,
+body.two-sidebars #header-main {
+  padding-left: 0;
+  }
+
+#content-main {
+  padding: 0 40px;
+  }
+
+#sidebar-left, #header-left {
+  width: 156px;
+  right: 259px;
+  padding-right: 15px;
+  padding-left: 24px;
+  }
+
+body.sidebar-left #header-left,
+body.two-sidebars #header-left {
+  right:205px;
+  }
+
+#sidebar-left {
+  top: -100px;
+  right: 275px;
+  }
+
+#sidebar-right, #header-right {
+  width: 156px;
+  padding-left: 15px;
+  padding-right: 24px;
+  margin-right: -259px;
+  }
+
+#sidebar-right {
+  margin-right: -275px;
+  }
+
+#header-wrapper, #content-wrapper {
+  width: auto;
+  }
+
+#header-wrapper {
+  padding-left: 195px;
+  padding-right: 259px;
+  }
+
+body.sidebar-left #header-wrapper,
+body.two-sidebars #header-wrapper {
+  padding-right: 205px;
+  }
+
+#content-wrapper {
+  padding-left: 195px;
+  padding-right: 275px;
+  }
+
+
+/*CONTENT AREA */
+
+#sidebar-left, #sidebar-right {
+  font-size: 13px;
+  line-height: 112%;
+  }
+
+#sidebar-left li, #sidebar-right li {
+  margin-bottom: .7em;
+  }
+
+body.sidebar-left #content-wrapper {
+  padding-right: 70px;
+  }
+
+body.no-sidebars #content-wrapper {
+  padding-right: 35px;
+  padding-left: 35px;
+  }
+body.navbar #content-main {
+  margin-top: 30px;
+  }
+
+#content-main, #sidebar-right, #sidebar-left {
+  padding-top: 0;
+  }
+
+
+/* HEADER ELEMENTS */
+
+
+#header {
+    padding-top: 40px;
+    min-height:160px;
+    background:url(images/header-no-sidebar.jpg) no-repeat top center #6d2a01;
+    }
+
+#header-main, body.header-main #header-main {
+  background: transparent;
+  padding-left: 10px;
+  padding-right:10px;
+  }
+
+#header #header-right {
+    padding-top: 20px;
+    text-align: center;
+    }
+
+body.sidebar-left, body.no-sidebars #header #header-right {
+    padding-top: 0;
+    }
+
+body.sidebar-left #header, body.two-sidebars #header {
+  padding-left: 195px;
+  }
+
+body.header-main #block-scholar-1, body.header-main-right #block-scholar-1 {
+  padding-left: 149px;
+  background: url(images/crest.png) no-repeat 21px 0 transparent;
+  min-height: 112px;
+  }
+
+body.sidebar-right #header-wrapper {
+  margin: 0;
+  }
+
 
 #scholar-shield {
  padding-top: 10px;
