theming of vsite tax, and jquery ui dialog

--- a/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.dialog.css
+++ b/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.dialog.css
@@ -7,13 +7,17 @@
 	}
 
 .ui-dialog .ui-dialog-titlebar {
-	padding: .5em .3em .3em 1em;
+	padding: 14px 25px;
 	position: relative;
+	background: #f2f3f3;
+	border-bottom: #bfc6c6;
 	}
 
 .ui-dialog .ui-dialog-title {
 	float: left;
 	margin: .1em 0 .2em;
+	font-weight: bold;
+	font-size: 15px;
 	}
 
 .ui-dialog .ui-dialog-titlebar-close {
@@ -37,7 +41,7 @@
 
 .ui-dialog .ui-dialog-content {
 	border: 0;
-	padding: .5em 1em;
+	padding: 30px 40px;
 	background: none;
 	overflow: auto;
 	zoom: 1;
