--- a/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.theme.css
+++ b/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.theme.css
@@ -10,22 +10,22 @@
 ----------------------------------*/
 .ui-dialog {
   background: #fff;
-  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow:0 10px 15px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow:0 10px 15px rgba(0, 0, 0, 0.5);
-  padding: 0 5px 15px 5px;
+  box-shadow: 0 4px 26px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow:0 4px 26px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow:0 4px 26px rgba(0, 0, 0, 0.5);
+  padding: 0;
   width:600px;
+  top: 20px;
   }
 
 .ui-widget, .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
 	width: 100%;
 	}
 
-.ui-widget, .ui-widget #edit-submit, .ui-widget #edit-delete {
-  width: auto;
-  }
-
-.ui-widget #edit-submit, .ui-widget #edit-delete {
+.ui-widget,
+.ui-widget #edit-submit,
+.ui-widget #edit-delete,
+.ui-widget .form-checkbox {
   width: auto;
   }
 
