ie6 warning, facet search theming

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -509,3 +509,22 @@ p.single, ul.single, ul.single li {
 p.single {
   margin-right: 8px;
   }
+
+/* SIDEBAR STYLING */
+
+#sidebar-right h3 {
+  font-size: 1.1em;
+  }
+
+#sidebar-right li {
+  font-size: .98em;
+  line-height: 150%;
+  margin: 0;
+  padding: 5px 2px;
+  border-top:1px solid #E8E8E8;
+  list-style:none;
+  }
+
+#sidebar-right li:hover {
+  background: #e3edef;
+  }
