facet search theming

--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -52,6 +52,10 @@ select option {
   padding: 2px 5px;
   }
 
+fieldset,select {
+  max-width: 90%;
+  }
+
 .views-exposed-form .views-exposed-widget {
   padding: 0 2em 0 0;
   }
@@ -62,6 +66,10 @@ select option {
 
 #search-form {
   padding-bottom: 5px;
+  }
+
+#content #search-form {
+  margin-top: 2em;
   }
 
 #search-form div.form-item {
@@ -117,6 +125,11 @@ select option {
   padding: 0 !important;
   text-indent: -999em;
   margin-right: -100%;
+  }
+
+#search-form fieldset.search-advanced {
+  clear: left;
+
   }
 
 
