--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -512,6 +512,10 @@ p.single {
 
 /* SIDEBAR STYLING */
 
+#sidebar-right {
+  padding-top: 2em;
+  }
+
 #sidebar-right h3 {
   font-size: 1.1em;
   }
