--- a/sites/all/themes/scholar_theme_09/scholar-theme-09.css
+++ b/sites/all/themes/scholar_theme_09/scholar-theme-09.css
@@ -89,11 +89,12 @@ h2.title {
   width: 100px;
   padding-right:35px;
   padding-left: 5px;
+  margin-right: -160px;
   }
 
 #content-wrapper, body.sidebar-left #content-wrapper,  body.sidebar-right #content-wrapper {
-    padding-left: 135px !important;
-    padding-right: 165px !important;
+    padding-left: 115px !important;
+    padding-right: 160px !important;
     }
 
 #footer {
@@ -127,6 +128,7 @@ h2.title {
 #header-right {
   width: 144px;
   padding:0;
+  margin-right:-164px;
   }
 
 #header-wrapper {
