theme 07 minor thing

--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -106,17 +106,17 @@ h3.title {
 #header-right {
   right: auto;
   width:70px;
+  margin-right: -120px;
   }
 
 #content-wrapper {
-  padding-left: 188px;
-  padding-right: 220px;
+  padding-left: 168px;
   padding-top: 30px;
   }
 
 #header-wrapper {
-  padding-right: 70px;
-  padding-left: 100px;
+  padding-right: 100px;
+  padding-left: 120px;
   }
 
 #sidebar-right {
