theme 06 minor thing

--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -84,19 +84,21 @@ body.header-left-main #header-wrapper {
 
 #sidebar-right, #header-right {
   padding-right: 36px;
+  margin-right: -246px;
   }
 
 #header-right {
   width: 70px;
+  margin-right: -136px;
   }
 
 #content-wrapper, #header-wrapper {
-  padding-left: 246px;
+  padding-left: 226px;
   padding-right: 246px;
   }
 
 #header-wrapper {
-  padding-right: 132px;
+  padding-right: 136px;
   height: 145px;
   }
 
