theme 04 minor thing

--- a/sites/all/themes/scholar_theme_04/scholar-theme-04-ie.css
+++ b/sites/all/themes/scholar_theme_04/scholar-theme-04-ie.css
@@ -1,4 +1,9 @@
-body.two-sidebars #sidebar-left, body.header-left-main-right #header-left {
+body.header-left-main-right #header-left {
+  left: 220px;
+  }
+
+
+body.two-sidebars #sidebar-left {
   left: 190px;
   }
 
