--- a/sites/all/themes/scholar_base/biblio.css
+++ b/sites/all/themes/scholar_base/biblio.css
@@ -226,3 +226,22 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
   padding-top:.6em;
   }
 
+/* ATTACHMENTS*/
+
+.node-type-biblio .itu-attachments {
+  display:inline-block;
+  vertical-align:middle;
+  }
+
+.node-type-biblio .itu-attachment-list {
+  width: auto;
+  border: none !important;
+  border-spacing: 0;
+  font-size: .85em;
+  }
+
+
+.node-type-biblio .itu-attachment-list td {
+  padding-right: .4em;
+  }
+
