fixed content update forms

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -138,6 +138,11 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   margin: 0 0 1.5em 0;
   }
 
+
+#cp-content .innerframe .vsite_content_filter_box form {
+  margin: 0;
+  }
+
 .page-cp-settings #cp-content .innerframe form .resizable-textarea  {
   width: 99%;
   }
