--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -28,7 +28,9 @@ div.vertical-tabs ul.vertical-tabs-list {
 	float: left;
 	}
 
-.section-cp fieldset .og-vocab-taxonomy legend, #dialog-main legend {
+.section-cp fieldset .og-vocab-taxonomy legend,
+#dialog-main legend,
+.section-cp .view-vsite-content legend {
   float: none;
   }
 
