--- a/sites/all/modules/contrib/imagefield_crop/imagefield_crop.css
+++ b/sites/all/modules/contrib/imagefield_crop/imagefield_crop.css
@@ -1,1 +1,12 @@
-/* $Id: imagefield_crop.css,v 1.1.4.2 2009/04/06 11:16:25 yhager Exp $ */
+/* $Id: imagefield_crop.css,v 1.1.4.5 2010/03/04 19:12:36 yhager Exp $ */
+#node-form img.cropbox {
+  display: none;
+}
+
+#node-form div.jcrop-holder img.cropbox {
+  display: block;
+}
+
+.widget-edit {
+  clear: both;
+}
