ligtbox2 back to 6--1 /dev version

--- a/sites/all/modules/contrib/lightbox2/css/lightbox.css
+++ b/sites/all/modules/contrib/lightbox2/css/lightbox.css
@@ -1,4 +1,4 @@
-/* $Id: lightbox.css,v 1.1.4.23 2009/01/01 14:05:58 snpower Exp $ */
+/* $Id: lightbox.css,v 1.1.4.25 2010/06/07 14:54:30 snpower Exp $ */
 #lightbox {
   position: absolute;
   top: 40px;
@@ -154,7 +154,7 @@
   height: 66px;
 }
 
-#overlay {
+#lightbox2-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -256,4 +256,8 @@
 
 .lightbox_hide_image {
   display: none;
+}
+
+#lightboxImage {
+  -ms-interpolation-mode: bicubic;
 }
