--- a/sites/all/modules/contrib/lightbox2/css/lightbox_alt.css
+++ b/sites/all/modules/contrib/lightbox2/css/lightbox_alt.css
@@ -1,4 +1,4 @@
-/* $Id: lightbox_alt.css,v 1.1.4.18 2008/08/15 10:09:54 snpower Exp $ */
+/* $Id: lightbox_alt.css,v 1.1.4.20 2010/06/07 14:54:30 snpower Exp $ */
 /**
  * Based on a design created by Nicolas Borda:
  * http://www.ipwa.net/assets/myslimbox/
@@ -119,7 +119,7 @@
   padding-bottom: 1.0em;
 }
 
-#overlay {
+#lightbox2-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -223,4 +223,8 @@
 
 .lightbox_hide_image {
   display: none;
+}
+
+#lightboxImage {
+  -ms-interpolation-mode: bicubic;
 }
