final theming to gary front block

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -12,13 +12,12 @@ body {
 /* TYPOGRAPHY */
 
 @font-face {
-	font-family: 'ExpresswayRgRegular';
-	src: url('fonts/expressway_rg-webfont.eot');
-	src: local('☺'), url('fonts/expressway_rg-webfont.woff') format('woff'), url('fonts/expressway_rg-webfont.ttf') format('truetype'), url('fonts/expressway_rg-webfont.svg#webfont') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
+  font-family: 'LeagueGothicRegular';
+  src: url('League-Gothic/League_Gothic-webfont.eot');
+  src: local('☺'), url('League-Gothic/League_Gothic-webfont.woff') format('woff'), url('League-Gothic/League_Gothic-webfont.ttf') format('truetype'), url('League-Gothic/League_Gothic-webfont.svg#webfont') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  }
 
 p, .biblio-entry, .views-row {
   margin: 0 0 1.5em 0;
@@ -28,9 +27,9 @@ p, .biblio-entry, .views-row {
   margin: 0;
   }
 
-h1, h2, h3, h4, #block-vsite_menus-0 li, #footer {
+h2, h3, h4, #block-vsite_menus-0 li, #footer {
   font-weight: normal;
-  font-family: 'ExpresswayRgRegular', sans-serif;
+  font-family: 'LeagueGothicRegular', sans-serif;
   }
 
 h2 {
@@ -38,15 +37,21 @@ h2 {
   letter-spacing:1px;
   }
 
+h3, h4 {
+  font-weight:normal;
+  font-size:25px;
+  margin: 0;
+  letter-spacing: .5px;
+  }
+
 h3 {
-  font-size: 18px;
-  line-height: 1em;
-  letter-spacing:1px;
+  color: #636363;
+  float:left;
+  margin-top: 10px;
   }
 
 h4 {
-  font-size: 14px;
-  line-height: 1em;
+  margin-bottom: 27px;
   }
 
 h2.title, h3.title {
