book things, gary etc

--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -287,6 +287,10 @@ body.no-sidebars #content-main #content {
   font-weight: normal;
   }
 
+admin-menu #content-main #content h2.title {
+  top: 95px;
+  }
+
 /* FOOTER */
 
 #footer {
