--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -13,11 +13,20 @@ body {
 
 @font-face {
   font-family: 'LeagueGothicRegular';
-  src: url('League-Gothic/League_Gothic-webfont.eot');
-  src: local('☺'), url('League-Gothic/League_Gothic-webfont.woff') format('woff'), url('League-Gothic/League_Gothic-webfont.ttf') format('truetype'), url('League-Gothic/League_Gothic-webfont.svg#webfont') format('svg');
+  src: url('fonts/League_Gothic-webfont.eot');
+  src: local('☺'), url('fonts/League_Gothic-webfont.woff') format('woff'), url('fonts/League_Gothic-webfont.ttf') format('truetype'), url('fonts/League_Gothic-webfont.svg#webfont') format('svg');
   font-weight: normal;
   font-style: normal;
   }
+
+@font-face {
+	font-family: 'ExpresswayRgRegular';
+	src: url('fonts/expressway_rg-webfont.eot');
+	src: local('☺'), url('fonts/expressway_rg-webfont.woff') format('woff'), url('fonts/expressway_rg-webfont.ttf') format('truetype'), url('fonts/expressway_rg-webfont.svg#webfont') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 
 p, .biblio-entry, .views-row {
   margin: 0 0 1.5em 0;
@@ -27,9 +36,8 @@ p, .biblio-entry, .views-row {
   margin: 0;
   }
 
-h2, h3, h4, #block-vsite_menus-0 li, #footer {
-  font-weight: normal;
-  font-family: 'LeagueGothicRegular', sans-serif;
+h1, h2, h3, h4, #navbar li, #footer {
+  font-family: 'ExpresswayRgRegular', sans-serif;
   }
 
 h2 {
@@ -63,6 +71,8 @@ h2.title, h3.title {
   padding: 16px;
   padding-top: 13px;
   border-bottom:1px solid #e5e5e5;
+  font-weight: normal;
+  font-family: 'LeagueGothicRegular', sans-serif;
   }
 
 #content .node h3.title {
